fix body align

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   background: #d5c6a4;
   max-width: 100%;
   min-height: 100vh;
-  margin: 0 1em;
+  margin: 1em;
 }
 /* HEADER */
 .header {
